--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "mint-ui": "^2.2.13",
-    "vue": "^2.6.11"
+    "moment": "^2.27.0",
+    "vue": "^2.6.11",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
